welcome.lessons.welcome.methods.slug.SlugHunting.scala.error
SlugHunting:2: error: Missing closing brace `}' assumed here
def hunt() {
^SlugHunting:10: error: Missing closing brace `}' assumed here
def isFacingTrail():Boolean = {
^